<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/hint2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/bntok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/bntclr"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/clear" />

    </LinearLayout>
    <Button
        android:id="@+id/bntchange"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:text="@string/changetologin"
        />


</LinearLayout>